rosetta/Middle-three-digits/check_correctness.log
../Makefile.generic:9: warning: overriding recipe for target 'middle-three-digits-1'
../Makefile.generic:6: warning: ignoring old recipe for target 'middle-three-digits-1'
../Makefile.generic:14: warning: overriding recipe for target 'middle-three-digits-1'
../Makefile.generic:9: warning: ignoring old recipe for target 'middle-three-digits-1'
../Makefile.generic:17: warning: overriding recipe for target 'middle-three-digits-1'
../Makefile.generic:14: warning: ignoring old recipe for target 'middle-three-digits-1'
../Makefile.generic:21: warning: overriding recipe for target 'middle-three-digits-1'
../Makefile.generic:17: warning: ignoring old recipe for target 'middle-three-digits-1'
../Makefile.generic:24: warning: overriding recipe for target 'middle-three-digits-1'
../Makefile.generic:21: warning: ignoring old recipe for target 'middle-three-digits-1'
make: Circular middle-three-digits-1 <- middle-three-digits-1 dependency dropped.
make: Circular middle-three-digits-2_mem2reg.cbe.c <- middle-three-digits-1 dependency dropped.
make: Circular middle-three-digits-2_mem2reg.ll <- middle-three-digits-1 dependency dropped.
clang -Xclang -disable-O0-optnone -S -emit-llvm -g middle-three-digits-2.c
middle-three-digits-2.c:9:61: error: expression is not assignable
    arg[0]=='-'?midPoint = ((strlen(arg) + 1) / 2):midPoint = ((strlen(arg) + 1) / 2) - 1;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
middle-three-digits-2.c:18:79: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
            printf("Error, %d has %d digits, no 3 middle digits.\n",atoi(arg),arg[0]=='-'?strlen(arg)-1:strlen(arg));
                                  ~~                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                  %lu
middle-three-digits-2.c:44:19: warning: implicit declaration of function 'itoa' is invalid in C99 [-Wimplicit-function-declaration]
                midThree(itoa(x[i],argv[0],10));
                         ^
middle-three-digits-2.c:44:19: warning: incompatible integer to pointer conversion passing 'int' to parameter of type 'char *' [-Wint-conversion]
                midThree(itoa(x[i],argv[0],10));
                         ^~~~~~~~~~~~~~~~~~~~~
middle-three-digits-2.c:5:20: note: passing argument to parameter 'arg' here
void midThree(char arg[])
                   ^
3 warnings and 1 error generated.
make: *** [../Makefile.generic:2: middle-three-digits-2.ll] Error 1
